--- a/kimyongmin/project01/src/App.css
+++ b/kimyongmin/project01/src/App.css
@@ -1,5 +1,29 @@
-
-.logo{
-    margin-left: 10px;
-}
-
+/* App.css */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+  }
+  
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  .logo {
+    margin-bottom: 20px;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+  }
+  
+  .input_area {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
