--- a/kimyongmin/project01/src/components/InputArea.css
+++ b/kimyongmin/project01/src/components/InputArea.css
@@ -2,6 +2,7 @@
 
 .input-area-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 20px;
@@ -33,19 +34,34 @@
   
 .contents {
   display: flex;
+  flex-direction: row;
+  
+  width: 1000px;
   border : 3px solid plum;
+  margin-top: 20px;
 }
 
 
 #price{
-  margin-left: 85px;
   margin-bottom: 10px;
-  border : 1px solid plum;
+  margin-top: 10px;
+  margin-left: 70px;
+  padding: 10px 20px;
+  background-color: plum;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 #news{  
-  margin-left : 10px;
-  border : 1px solid plum;
-  margin-top: 5px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  padding: 10px 20px;
+  background-color: plum;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 
@@ -53,6 +69,13 @@
   width: 400px;
   border-right : 3px solid plum;
   background-color: whitesmoke;
+
 }
 
+.button{
+  display: flex;
+  justify-content: center; /* 가로 방향 가운데 정렬 */
+  align-items: center; /* 세로 방향 가운데 정렬 */
+  height: 100vh; /* 부모 컨테이너의 높이를 화면 높이와 같게 설정 */
+}
   
