--- a/kimyongmin/project01/src/components/InputArea.css
+++ b/kimyongmin/project01/src/components/InputArea.css
@@ -45,7 +45,6 @@
 #price{
   margin-bottom: 10px;
   margin-top: 10px;
-  margin-left: 70px;
   padding: 10px 20px;
   background-color: plum;
   color: white;
@@ -56,6 +55,7 @@
 #news{  
   margin-bottom: 10px;
   margin-left: 10px;
+  margin-top: 10px;
   padding: 10px 20px;
   background-color: plum;
   color: white;
@@ -76,6 +76,4 @@
   display: flex;
   justify-content: center; /* 가로 방향 가운데 정렬 */
   align-items: center; /* 세로 방향 가운데 정렬 */
-  height: 100vh; /* 부모 컨테이너의 높이를 화면 높이와 같게 설정 */
 }
-  
