--- a/kimyongmin/project01/src/components/css/Header.css
+++ b/kimyongmin/project01/src/components/css/Header.css
@@ -2,4 +2,13 @@
     margin-right: 920px;
     margin-top: 10px;
     width: 120px;
+    
   }
+  .header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; 
+    margin-top: 10px;
+  }
+  
