--- a/kimyongmin/project01/src/components/css/Ranking.css
+++ b/kimyongmin/project01/src/components/css/Ranking.css
@@ -12,12 +12,12 @@
 
 .best-card{
     background-color: plum;
-    margin-left: 0px;
+    margin-left: 450%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1000%;
+    width: 600%;
 }
 .card-text{
     display: flex;
@@ -25,6 +25,8 @@
     justify-content: center;
     align-items: center;
     margin: 5%;
+    overflow: 'hidden';
+    textOverflow : 'ellipsis';
 }
 .card-text2{
     margin: auto;
@@ -32,5 +34,5 @@
 
 .crownimg{
     display: grid;
-    margin-left: 300%;
+    margin-left: 650%;
 }
