--- a/kimyongmin/project01/src/components/css/Banner.css
+++ b/kimyongmin/project01/src/components/css/Banner.css
@@ -20,7 +20,7 @@
     border-radius: 5px;
     cursor: pointer;
   }
-  #news{  
+  #policy{  
     margin-bottom: 10px;
     margin-left: 10px;
     margin-top: 10px;
