--- a/kimyongmin/project01/src/components/css/News.css
+++ b/kimyongmin/project01/src/components/css/News.css
@@ -1,6 +1,36 @@
-.newimg{
+/* News.css */
+
+.news-container {
+    max-height: 800px;
+    overflow-y: auto;
+    padding: 10px;
+  }
+  
+  .news-item {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+    margin-bottom: 10px;
+  }
+  
+  .news-box {
+    width: 100%;
+    border: 1px solid #ccc;
+    padding: 2px;
+    border-radius: 6px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  }
+  
+  .news-date {
+    font-size: 12px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 2px;
+  }
+  
+  .news-content {
+    font-size: 14px;
+    line-height: 1.3;
+    color: #666;
+  }
+  
