--- a/kimyongmin/project01/src/components/css/Banner.css
+++ b/kimyongmin/project01/src/components/css/Banner.css
@@ -6,7 +6,7 @@
     background-color: purple;
   }
 
-  #news:hover {
+  #policy:hover {
     background-color: purple;
   }
 
@@ -19,6 +19,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   }
   #policy{  
     margin-bottom: 10px;
@@ -30,10 +31,11 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
   .banner{
-    width: 400px;
+    width: 300px;
     border-right : 3px solid plum;
     background-color: whitesmoke;
   
@@ -43,4 +45,5 @@
     display: flex;
     justify-content: center; /* 가로 방향 가운데 정렬 */
     align-items: center; /* 세로 방향 가운데 정렬 */
+    
   }
