--- a/kimyongmin/project01/src/components/css/Contents.css
+++ b/kimyongmin/project01/src/components/css/Contents.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     
-    width: 1000px;
+    width: 100%;
     border : 3px solid plum;
     margin-top: 20px;
+    margin-right: 100px;
   }
