--- a/kimyongmin/project01/src/components/css/InputArea.css
+++ b/kimyongmin/project01/src/components/css/InputArea.css
@@ -13,6 +13,17 @@
     font-size: 16px;
     border: 2px solid plum;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .input-area-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   
@@ -25,6 +36,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   }
   
 
