--- a/kimyongmin/project01/src/components/css/Ranking.css
+++ b/kimyongmin/project01/src/components/css/Ranking.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     width: 600%;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .card-text{
     display: flex;
