--- a/kimyongmin/project01/src/components/css/TradeLog.css
+++ b/kimyongmin/project01/src/components/css/TradeLog.css
@@ -1,9 +1,24 @@
+.tradelog-container{
+    margin-top: 18%;
+}
+
 .TradeTable{
     display: gird;
     margin-left: 15%;
-    margin-top: 22%;
     height: 60%;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .tablehead{
     background-color: lavender;
 }
+.trade-log-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    margin-left: 15%;
+  }
+
+  
